Personal interests header

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@ color: gray;
 <img src = "9D9E2F52-5828-4110-9353-1D8115FE9B45.jpeg" width = "400">
 <h1>Oxy Involvement</h1>
 <body>I am a biology major at Oxy, and I play for the <a href=" https://www.oxyathletics.com/sports/wsoc/index">women's soccer team</a>. I also work for the COVID Operations Center on campus.</body>
+<h1>Interests</h1>
 </body>
  </html>
