Contact info header

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@ color: gray;
 <body>I am a biology major at Oxy, and I play for the <a href=" https://www.oxyathletics.com/sports/wsoc/index">women's soccer team</a>. I also work for the COVID Operations Center on campus.</body>
 <h1>Interests</h1>
 <body>I love the outdoors and being active. Some of my favorite activities are hiking and skiing. Academically, I'm interested in medicine and public health.</body>
+<h1>Contact Information</h1>
 </body>
  </html>
