email and phone number

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ color: gray;
 <h1>Interests</h1>
 <body>I love the outdoors and being active. Some of my favorite activities are hiking and skiing. Academically, I'm interested in medicine and public health.</body>
 <h1>Contact Information</h1>
+<body>Email: ghildner@oxy.edu</body>
 </body>
  </html>
