--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 text-align: center;
 }
 </style>
+<style>* {
 color: gray;
+}
 <h1>GRACE HILDNER</h1>
 <img src = "9D9E2F52-5828-4110-9353-1D8115FE9B45.jpeg" width = "400">
 <h1>Oxy Involvement</h1>
