--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@ color: gray;
 <body>I love the outdoors and being active. Some of my favorite activities are hiking and skiing. Academically, I'm interested in medicine and public health.</body>
 <h1>Contact Information</h1>
 <body>Email: ghildner@oxy.edu</body>
+<p>Phone Number: 303-720-8199</p>
 </body>
  </html>
